--- a/views/login.pug
+++ b/views/login.pug
@@ -1,12 +1,11 @@
 extends base
 block body
-  script(src="/public/js/login.js", type="text/javascript", defer)
   h5 Pagina de login
   form(method="POST")
     p Email
-    input(type="email", placeholder="exemplo@gmail.com", name="email")
+    input(type="email", placeholder="exemplo@gmail.com", name="email", required)
     p Password
-    input(type="password", placeholder="·······", name="password")
+    input(type="password", placeholder="·······", name="password", required)
     br
     input(type="submit", value="Efetuar Login")
     br
