--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,3 +1,5 @@
 extends base
 block body
+  script(src="/public/js/login.js", type="text/javascript", defer)
   h5 Dashboard
+  input(type="button",value="logout",class="logoutBtn")
