--- a/views/pacientes.pug
+++ b/views/pacientes.pug
@@ -2,7 +2,7 @@ extends base
 block head
   link(rel="stylesheet", href="/public/css/base.css")
 block body
-  script(src="./public/js/base.js", type="text/javascript", defer)
+  script(src="/public/js/base.js", type="text/javascript", defer)
   h5 Pacientes Inseridos
   if err
     h3(class="msgErro") #{err}
